web-infras/parser/tests/fixtures/babel/core/uncategorised/506/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,38)
1|function hello() { "use strict"; var package; }
 |                                    ^
